--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.4.10",
+    "bootstrap": "^4.5.2",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^4.0.0",
