--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "web-server/app.js",
   "scripts": {
     "compile:sass": "node-sass sass/style.scss css/style.css",
-    "start": "nodemon web-server/app.js"
+    "dev": "nodemon web-server/app.js",
+    "start": "node web-server/app.js"
   },
   "keywords": [
     "heroku"
@@ -34,6 +35,6 @@
     "nodemon": "^2.0.6"
   },
   "engines": {
-    "node": "10.15.3"
+    "node": "v10.24.1"
   }
 }
